[package]
authors = ["yue <cargo@yue.coffee>"]
edition = "2021"
name = "rstoml"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2.0.0-beta.2", features = ["serde-json", "napi8"]}
napi-derive = "2.0.0-beta.2"
toml = {git = "https://github.com/alexcrichton/toml-rs"}
chrono = "0.4"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
